<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:layout_marginLeft="15dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Level"
        android:textSize="8pt"
        android:layout_marginRight="10dp"

        />
    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:minWidth="200dp"
        android:maxWidth="400dp"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="6"
        android:progress="0"
        android:paddingTop="8px"
        android:secondaryProgress="4"
        android:progressBackgroundTint="#F43E05"
        android:progressTint="#3F51B5"
        android:secondaryProgressTint="@color/colorPrimaryDark"
        />

</LinearLayout>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:id="@+id/scoreLayout">
    >
    <TextView
        android:id="@+id/scoreTV"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:freezesText="false"
        android:text="Score"
        android:textIsSelectable="false"
        android:paddingRight="20dp"
        android:textSize="33sp" />
    <TextView
        android:id="@+id/gradeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="33sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        />


    </LinearLayout>
    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/question_text"
        android:layout_margin="30dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="auto"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/true_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/true_button"
            android:background="@drawable/rounded_corners"

            />

        <Button
            android:id="@+id/false_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rounded_corners"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="30dp"
        >

        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/circle"
            android:text="@string/cheat_button"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Previous_button"
            android:backgroundTint="@color/Drak_gray"
            android:drawableLeft="@drawable/ic_baseline_arrow_left_24"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rounded_corners"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Next_button"
            android:backgroundTint="@color/Drak_gray"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:drawableRight="@drawable/ic_baseline_arrow_right_24"
            android:background="@drawable/rounded_corners"
            android:padding="10dp"
            />

    </LinearLayout>
</LinearLayout>